--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <img id="extra-info" alt="Extra Informatie">
     </div>
     <p></p>
-    <button class="button" onclick="reloadPage()">Herlaad de webpagina</button>
+    <button class="button" onclick="reloadPage()">Geef me drie nieuwe kaarten</button>
     <p></p>
     <a href="https://www.robbewulgaert.be/onderwijs/de-chimaera-het-fantastische-monster" target="_blank">
         <button class="button">Project Chimaera - 10 tot 12 jaar (meer info)</button>
